[package]
name = "http_fo"
description = "HTTP and WebSocket client-side failover over multiple A/AAAA records"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[dependencies]
futures-util = "0.3"
http = "1"
lru = "0.12"
native-tls = "0.2"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "time", "rt", "macros", "sync"] }
tokio-native-tls = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
